# 2048

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  pair.rs  tests.rs
cursive-frontend/: Cargo.toml
cursive-frontend/src/: container.rs  main.rs
tui-frontend/: Cargo.toml
tui-frontend/src/: main.rs
wasm-frontend/: Cargo.toml  index.html  index.js  popup.css  position.css  styles.css  tile.css
wasm-frontend/src/: lib.rs
