[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.80"
getrandom = { version = "0.2.7", features = ["js"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
